[mac] Open profile chooser bubble on mouse down.

This CL opens the profile chooser bubble on mouse down events as
suggested in https://bugs.chromium.org/p/chromium/issues/detail?id=784574#c5

Bug: 784574
Change-Id: I267c59e0612e7030ebf50526109bf9f4d99d41df
Reviewed-on: https://chromium-review.googlesource.com/789111
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519259}
Former-commit-id: feec86d260eb2d97e31db29526be56a2a6a0209b